hello-theme-child-master/style.css
/*
Theme Name:     Hello Elementor Child
Theme URI:      https://elementor.com/
Description:    Hello Elementor Child is a child theme of Hello Elementor, created by Elementor team
Author:         Elementor Team
Author URI:     https://elementor.com/
Template:       hello-elementor
Version:        1.0.1
Text Domain:    hello-elementor-child
Tags:           flexible-header, custom-colors, custom-menu, custom-logo, editor-style, featured-images, rtl-language-support, threaded-comments, translation-ready
*/

/* Added by Juliana Gonzalez ----------- Start Here ------------- */
/* fix labels of signup form of footer going outside of screen on mobile */
.gform_wrapper form.gf_simple_horizontal .gfield_description:not(.validation_message), .gform_wrapper form.gf_simple_horizontal .ginput_complex label, .gform_wrapper form.gf_simple_horizontal label.gfield_label {
    display: none!important;
    left: 0!important;
}

/* fix Image gallery going outside of screen on mobile */
.uael-ins-sutro{
	max-width:100%!important;
	overflow:hidden!important;
}

.uael-img-carousel-wrap{
	white-space: normal!important;
}

/* By Juliana - 10/12/2020 */
@media (max-width: 767px){
	.uaoffcanvas-00fbce8 .uael-offcanvas-content {
	    padding-bottom:70px!important;
	}
}

/* Added 11/5/2020 Fix for menu issue */
.elementor-location-header .menu-item .sub-menu{
	z-index: 1004!important;
}

/* By Juliana Gonzalez ----------- End ------------- */

